# Dagster-Pipeline-Great-Expectations-Quality-Gates

./: README.md
dagster-gx-pipeline/: Makefile  README.md  pyproject.toml
dagster-gx-pipeline/.github/workflows/: ci.yml
dagster-gx-pipeline/data/: sample_api_payload.json
dagster-gx-pipeline/expectations/: great_expectations.yml
dagster-gx-pipeline/expectations/expectations/: agg_suite.json  cleaned_suite.json
dagster-gx-pipeline/pipeline/: __init__.py  api.py  assets.py  definitions.py  gx.py  io.py  report.py  settings.py  validate.py
dagster-gx-pipeline/tests/: test_assets.py
