[project]
name = "dagster-gx-pipeline"
version = "0.1.0"
description = "Local Dagster + Great Expectations pipeline using DuckDB"
requires-python = ">=3.11"
authors = [{name = "Data Platform Team"}]
readme = "README.md"
dependencies = [
  "dagster>=1.6.0",
  "dagster-webserver>=1.6.0",
  "duckdb>=0.10.0",
  "pandas>=2.2.0",
  "requests>=2.31.0",
  "great-expectations>=0.18.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-mock>=3.12.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-requests>=2.31.0.20240311",
  "pandas-stubs>=2.2.0",
]

[tool.ruff]
line-length = 100
src = ["pipeline", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
addopts = "-q"
